# synthea-on-fhir

./: manifest.mf
epic_on_fhir/: .npmrc  README.md  databricks.yml  deploy.sh  pyproject.toml
epic_on_fhir/fixtures/: session_summaries.md
epic_on_fhir/fixtures/danger/: Clean Up - Drop Schema Cascade.dbquery.ipynb
epic_on_fhir/fixtures/examples/: jwks.json
epic_on_fhir/fixtures/sessions/: 2026-04-11_initial-bundle-setup.md  2026-04-11_job-yaml-refactoring.md  2026-04-13_approval-tag-convention-timeout-removal.md  2026-04-13_deployment-notebook-fixes-sdk-convention.md  2026-04-13_evaluation-notebook-uc-metrics.md  2026-04-13_mlflow3-deployment-job-implementation.md  2026-04-13_otel-sdk-instrumentation.md  2026-04-13_session-summaries-migration.md  INDEX.md
epic_on_fhir/resources/: epic_on_fhir.schema.yml  epic_on_fhir.secret_scope.yml  epic_on_fhir_auth.experiment.yml  epic_on_fhir_auth.serving.yml  epic_on_fhir_model_deployment.job.yml  epic_on_fhir_model_registration.job.yml  epic_on_fhir_requests.experiment.yml  epic_on_fhir_requests.registered_model.yml  epic_on_fhir_requests.serving.yml  epic_on_fhir_requests.serving.yml.skip  jwk_url.app.yml  sample_job.job.yml
epic_on_fhir/src/: approval.ipynb  deployment.ipynb  epic-on-fhir-auth-model.ipynb  epic-on-fhir-example.ipynb  epic-on-fhir-requests-model.ipynb  epic-sandbox-basic-auth.ipynb  epic-smart-on-fhir-class-examples.ipynb  evaluation.ipynb  sample_notebook.ipynb  update-serving-endpoint-config.ipynb
epic_on_fhir/src/_archive/: update-serving-endpoint-config.py
epic_on_fhir/src/epic_on_fhir/: auth.py  endpoint.py  epic_fhir_pyfunc.py  main.py
epic_on_fhir/src/jwk_url_app/: app.py  requirements.txt
epic_on_fhir/src/queries/: Epic FHIR Endpoint Test Flow.dbquery.ipynb  Simple Endpoint Test.dbquery.ipynb  Test Endpoint.dbquery.ipynb
epic_on_fhir/src/smart_on_fhir/: epic_fhir_model.py  epic_fhir_pyfunc.py
epic_on_fhir/tests/: conftest.py  sample_taxis_test.py  test_approval_notebook.py  test_auth.py  test_deployment_notebook.py  test_endpoint.py  test_epic_fhir_pyfunc.py  test_evaluation_notebook.py  test_payloads.py  test_registration_notebook.py
fhirETL/fhir_declarative_pipeline/: PROJECT_MEMORY.md  README.md  databricks.yml  pyproject.toml
fhirETL/fhir_declarative_pipeline/fixtures/: Genie Code Starter Session - DO NOT EDIT.ipynb
fhirETL/fhir_declarative_pipeline/fixtures/gold_etl/: claim_gold.gold.yml  (+19 more)
fhirETL/fhir_declarative_pipeline/napkin/: Move FHIR Bundles.ipynb
fhirETL/fhir_declarative_pipeline/resources/: fhir_bundle_ingestion_etl.pipeline.yml  fhir_bundle_mover.job.yml  fhir_bundle_mover.pipeline.yml  fhir_declarative_pipeline_etl.pipeline.yml  fhir_etl_orchestration.job.yml  fhir_gold_clinical_mart.pipeline.yml  fhir_gold_etl.pipeline.yml  fhir_resource_silver_etl.pipeline.yml  synthetic_fhir_etl_orchestration.job.yml
(+114 files in other folders)
