[project]
name = "epic_on_fhir"
version = "0.0.1"
authors = [{ name = "matthew.giglia@databricks.com" }]
requires-python = ">=3.12,<3.13"
dependencies = [
    # Any dependencies for jobs and pipelines in this project can be added here
    # See also https://docs.databricks.com/dev-tools/bundles/library-dependencies
    #
    # LIMITATION: for pipelines, dependencies are cached during development;
    # add dependencies to the 'environment' section of your pipeline.yml file instead
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "databricks-dlt",
    "databricks-connect>=17.2,<17.4",
    "ipykernel",
    "shiny",
    "jwcrypto",
    "cryptography"
]

[project.scripts]
main = "epic_on_fhir.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120
